--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <hr class="star-primary">
                         <p class="omni">Whether you need an old fence repaired or spruced up, or if it's time for a new fence...</p>
                         <span class="skills">CALL US FOR AN OBLIGATION-FREE QUOTE</span>
-                        <p class="number">0431 251 882</p>
+                        <p class="number"><a href="tel:0431251882">0431 251 882</a></p>
                     </div>
                 </div>
             </div>
